introduce `CodeFactory`